--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="loadingScreen" class="fixed inset-0 bg-white z-50 flex items-center justify-center">
         <div class="text-center">
             <div class="animate-spin rounded-full h-16 w-16 border-t-4 border-b-4 border-blue-500 mx-auto mb-4"></div>
-            <p class="text-gray-600 font-semibold">데이터를 불러오는 중...</p>
+            <p class="text-gray-600 font-semibold">데이터를 불러오는 중입니다.</p>
         </div>
     </div>
 
