--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
                 <!-- 접속 통계 -->
                 <div class="bg-white rounded-xl shadow-md p-6 fade-in">
-                    <h3 class="text-lg font-bold text-gray-800 mb-4 text-center">오늘 방문자</h3>
+                    <h3 class="text-lg font-bold text-gray-800 mb-4 text-center">라온 플랫폼을 방문해주신 분들</h3>
                     <div class="flex justify-center">
                         <canvas id="visitChart" width="150" height="150"></canvas>
                     </div>
