로고심벌 업데이트

--- a/index.html
+++ b/index.html
@@ -292,34 +292,34 @@
             <h3 class="text-2xl font-bold text-gray-800 mb-8 text-center">함께하는 파트너</h3>
             <div class="grid grid-cols-2 md:grid-cols-5 gap-6">
                 <div class="flex items-center justify-center p-4 bg-gray-50 rounded-lg hover:shadow-md transition-all">
-                    <img src="https://via.placeholder.com/150x80?text=Partner+1" alt="파트너 1" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
+                    <img src="/images/partners/광주광역시.png" alt="파트너 1" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
                 </div>
                 <div class="flex items-center justify-center p-4 bg-gray-50 rounded-lg hover:shadow-md transition-all">
-                    <img src="https://via.placeholder.com/150x80?text=Partner+2" alt="파트너 2" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
+                    <img src="/images/partners/광주광역시 동구.png" alt="파트너 2" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
                 </div>
                 <div class="flex items-center justify-center p-4 bg-gray-50 rounded-lg hover:shadow-md transition-all">
-                    <img src="https://via.placeholder.com/150x80?text=Partner+3" alt="파트너 3" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
+                    <img src="/images/partners/광주광역시 서구.png" alt="파트너 3" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
                 </div>
                 <div class="flex items-center justify-center p-4 bg-gray-50 rounded-lg hover:shadow-md transition-all">
-                    <img src="https://via.placeholder.com/150x80?text=Partner+4" alt="파트너 4" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
+                    <img src="/images/partners/광주광역시 남구.png" alt="파트너 4" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
                 </div>
                 <div class="flex items-center justify-center p-4 bg-gray-50 rounded-lg hover:shadow-md transition-all">
-                    <img src="https://via.placeholder.com/150x80?text=Partner+5" alt="파트너 5" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
+                    <img src="/images/partners/광주광역시 북구.png" alt="파트너 5" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
                 </div>
                 <div class="flex items-center justify-center p-4 bg-gray-50 rounded-lg hover:shadow-md transition-all">
-                    <img src="https://via.placeholder.com/150x80?text=Partner+6" alt="파트너 6" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
+                    <img src="/images/partners/광주광역시 광산구.png" alt="파트너 6" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
                 </div>
                 <div class="flex items-center justify-center p-4 bg-gray-50 rounded-lg hover:shadow-md transition-all">
-                    <img src="https://via.placeholder.com/150x80?text=Partner+7" alt="파트너 7" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
+                    <img src="/images/partners/전라남도.png" alt="파트너 7" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
                 </div>
                 <div class="flex items-center justify-center p-4 bg-gray-50 rounded-lg hover:shadow-md transition-all">
-                    <img src="https://via.placeholder.com/150x80?text=Partner+8" alt="파트너 8" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
+                    <img src="/images/partners/전라남도 담양군.png" alt="파트너 8" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
                 </div>
                 <div class="flex items-center justify-center p-4 bg-gray-50 rounded-lg hover:shadow-md transition-all">
-                    <img src="https://via.placeholder.com/150x80?text=Partner+9" alt="파트너 9" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
+                    <img src="/images/partners/전라남도 장성군.png" alt="파트너 9" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
                 </div>
                 <div class="flex items-center justify-center p-4 bg-gray-50 rounded-lg hover:shadow-md transition-all">
-                    <img src="https://via.placeholder.com/150x80?text=Partner+10" alt="파트너 10" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
+                    <img src="/images/partners/전라남도 화순군.png" alt="파트너 10" class="max-h-16 opacity-70 hover:opacity-100 transition-opacity">
                 </div>
             </div>
         </div>
